# professor-basils-lab

./: .gitignore  DEVLOG-DEVELOPER.md  DEVLOG-POKEMON.md  DEVLOG-RECRUITER.md  LICENSE  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
e2e/: battle.spec.ts  team-builder.spec.ts  wild.spec.ts
public/: manifest.json  sw.js
public/audio/: README.txt  catch-success.flac
public/wasm/: gen3_parser_bg.wasm  pkmn_analysis_bg.wasm  pkmn_battle_bg.wasm  pkmn_breeding_bg.wasm  pkmn_catch_rate_bg.wasm  pkmn_damage_bg.wasm  pkmn_showdown_bg.wasm  pkmn_stats_bg.wasm  pkmn_type_chart_bg.wasm
rust/: Cargo.toml  build-all.sh
rust/citrine/: Cargo.toml
rust/gen3-parser/: Cargo.toml
rust/pkmn-analysis/: Cargo.toml
rust/pkmn-battle/: Cargo.toml
rust/pkmn-breeding/: Cargo.toml
rust/pkmn-catch-rate/: Cargo.toml
rust/pkmn-damage/: Cargo.toml
rust/pkmn-showdown/: Cargo.toml
rust/pkmn-stats/: Cargo.toml
rust/pkmn-stats/pkg/: pkmn_stats.d.ts  pkmn_stats.js
rust/pkmn-stats/src/: lib.rs
rust/pkmn-type-chart/: Cargo.toml
scripts/: encrypt-wasm.mjs  obfuscate.mjs  scramble-typechart.mjs  sign-manifest.mjs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: AbilitySelector.tsx  AchievementPanel.tsx  AudioPlayer.tsx  DamageCalculator.tsx  DamageMatrix.tsx  EVEditor.tsx  EvolutionTreeViewer.tsx  FormeSelector.tsx  HabitatDex.tsx  HeldItemSelector.tsx  IVEditor.tsx  IVOptimizer.tsx  InstallPrompt.tsx  ItemSprite.tsx  LoadingSpinner.tsx  PokeImage.tsx  (+28 more)
tests/: gen3-parser-parity.test.ts
(+288 files in other folders)
